adjust the forecast card

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -113,6 +113,41 @@
   },
   "manualStart": "Manual Start",
   "farmInfo": "Farm Info",
-  "scheduled": "Scheduled"
+  "scheduled": "Scheduled",
+  "pleaseEnterFirstName": "Please enter your first name",
+  "pleaseEnterLastName": "Please enter your last name",
+  "pleaseEnterEmail": "Please enter your email",
+  "pleaseEnterValidEmail": "Please enter a valid email",
+  "pleaseEnterPassword": "Please enter your password",
+  "passwordMinLength": "Password must be at least 8 characters",
+  "province": "Province",
+  "district": "District",
+  "chooseProvince": "Choose a province",
+  "chooseDistrict": "Choose a district",
+  "chooseProvinceFirst": "Choose a province first",
+  "addressOptional": "Address (optional)",
+  "addressHint": "e.g., Village, Cell, Sector",
+  "addressTooShort": "Address too short",
+  "addressTooLong": "Address too long",
+  "pleaseConfirmPassword": "Please confirm your password",
+  "passwordsDoNotMatch": "Passwords do not match",
+  "registrationFailed": "Registration failed",
+  "failedToSendResetEmail": "Failed to send reset email",
+  "verifyEmail": "Verify Email",
+  "verifyYourEmail": "Verify Your Email",
+  "verificationEmailSentTo": "We've sent a verification email to:",
+  "nextSteps": "Next Steps:",
+  "checkEmailInbox": "1. Check your email inbox",
+  "lookForFirebaseEmail": "2. Look for an email from Firebase",
+  "checkSpamFolder": "3. Check your spam/junk folder",
+  "clickVerificationLink": "4. Click the verification link",
+  "returnAndClickVerified": "5. Return here and click \"I've Verified\"",
+  "verifiedMyEmail": "I've Verified My Email",
+  "resendVerificationEmail": "Resend Verification Email",
+  "backToLogin": "Back to Login",
+  "errorSendingEmail": "Error sending email",
+  "emailNotVerifiedYet": "Email not verified yet. Please check your email and click the verification link.",
+  "errorCheckingVerification": "Error checking verification",
+  "verificationEmailSent": "Verification email sent! Please check your inbox and spam folder."
 }
 
