--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -710,5 +710,73 @@
   "changePasswordTitle": "Changer le mot de passe",
   "secureYourAccountTitle": "Sécurisez votre compte",
   "securityTipsTitle": "Conseils de sécurité",
-  "failedDeleteSchedule": "Échec de la suppression du calendrier."
+  "failedDeleteSchedule": "Échec de la suppression du calendrier.",
+  "accountVerification": "Vérification du compte",
+  "verificationPendingTitle": "Compte en cours de vérification",
+  "verificationPendingMessage": "Votre inscription a été soumise pour vérification. Notre équipe d'administration examinera les détails de votre coopérative et vous contactera sous peu. Merci de votre patience !",
+  "goToHome": "Aller à l'accueil",
+  "emailAlreadyRegistered": "{email} est déjà enregistré",
+  "@emailAlreadyRegistered": { "description": "Erreur quand l'email est déjà utilisé", "placeholders": { "email": { "type": "String" } } },
+  "phoneAlreadyRegistered": "Le numéro {phone} est déjà enregistré",
+  "@phoneAlreadyRegistered": { "description": "Erreur quand le numéro de téléphone est déjà utilisé", "placeholders": { "phone": { "type": "String" } } },
+  "cooperativeIdAlreadyRegistered": "L'ID de la coopérative {coopId} est déjà enregistré",
+  "@cooperativeIdAlreadyRegistered": { "description": "Erreur quand l'ID de la coopérative est déjà utilisé", "placeholders": { "coopId": { "type": "String" } } },
+  "verifyingRegistration": "Vérification de l'inscription...",
+  "registrationVerificationFailed": "Erreur lors de la vérification de l'inscription : {error}",
+  "@registrationVerificationFailed": { "description": "Erreur lorsque le processus de vérification échoue", "placeholders": { "error": { "type": "String" } } },
+  "createSchedule": "Créer un calendrier",
+  "deleteScheduleConfirmation": "Êtes-vous sûr de vouloir supprimer ce calendrier d'irrigation ?",
+  "addFirstFieldToStart": "Ajoutez votre premier champ pour commencer !",
+  "userInsightFarmHeadline": "Sur {count} parcelle(s), l'humidité moyenne du sol est de {moisture} et la température moyenne est de {temp}.",
+  "@userInsightFarmHeadline": { "description": "Résumé des moyennes au niveau de la ferme", "placeholders": { "count": { "type": "int" }, "moisture": { "type": "String" }, "temp": { "type": "String" } } },
+  "userInsightWaterLine": "Aujourd'hui, vous avez irrigué {liters} sur vos parcelles.",
+  "@userInsightWaterLine": { "description": "Ligne courte décrivant les litres irrigués aujourd'hui", "placeholders": { "liters": { "type": "String" } } },
+  "userInsightNoFields": "Vous n'avez pas encore de parcelles — ajoutez-en pour commencer à recevoir des informations.",
+  "recommendationShortIrrigate": "Irriguer",
+  "recommendationShortDrainage": "Drainage",
+  "recommendationShortNeutral": "Neutre",
+  "noAlerts": "Aucune alerte",
+  "alert": "Alerte",
+  "aboutFamingaIrrigation": "À propos de Faminga Irrigation",
+  "logout": "Se déconnecter",
+  "version": "Version 1.0.0",
+  "registrationFailed": "L'inscription a échoué. Veuillez réessayer.",
+  "pleaseEnterFirstName": "Veuillez entrer votre prénom",
+  "pleaseEnterLastName": "Veuillez entrer votre nom de famille",
+  "pleaseEnterEmail": "Veuillez entrer un email valide",
+  "pleaseEnterPhoneNumber": "Veuillez entrer un numéro de téléphone valide",
+  "province": "Province",
+  "chooseProvince": "Veuillez choisir une province",
+  "district": "District",
+  "chooseProvinceFirst": "Veuillez d'abord choisir une province",
+  "chooseDistrict": "Veuillez choisir un district",
+  "addressHint": "Entrez votre adresse",
+  "addressTooShort": "L'adresse doit contenir au moins 5 caractères",
+  "addressTooLong": "L'adresse ne peut pas dépasser 100 caractères",
+  "pleaseEnterPassword": "Veuillez entrer un mot de passe",
+  "passwordMinLength": "Le mot de passe doit contenir au moins 6 caractères",
+  "pleaseConfirmPassword": "Veuillez confirmer votre mot de passe",
+  "passwordsDoNotMatch": "Les mots de passe ne correspondent pas",
+  "manualStart": "Démarrage manuel",
+  "farmInfo": "Infos de la ferme",
+  "scheduled": "Programmé",
+  "daysAgo": "Il y a {days}j",
+  "@daysAgo": { "description": "Temps affiché en jours", "placeholders": { "days": { "type": "int" } } },
+  "changePassword": "Changer le mot de passe",
+  "secureYourAccount": "Sécurisez votre compte",
+  "currentPassword": "Mot de passe actuel",
+  "newPassword": "Nouveau mot de passe",
+  "confirmNewPassword": "Confirmer le nouveau mot de passe",
+  "weakPassword": "Faible",
+  "mediumPassword": "Moyen",
+  "strongPassword": "Fort",
+  "enterCurrentPassword": "Entrez votre mot de passe actuel",
+  "enterNewPassword": "Entrez votre nouveau mot de passe",
+  "passwordRequirement8Chars": "Au moins 8 caractères",
+  "passwordRequirementUppercase": "Contient une lettre majuscule",
+  "passwordRequirementLowercase": "Contient une lettre minuscule",
+  "passwordRequirementNumber": "Contient un chiffre",
+  "reEnterNewPassword": "Ressaisissez votre nouveau mot de passe",
+  "chooseStrongPassword": "Choisissez un mot de passe fort pour protéger vos données agricoles",
+  "pleaseEnterValidPhoneNumber": "Veuillez entrer un numéro de téléphone valide"
 }
