--- a/lib/l10n/app_rw.arb
+++ b/lib/l10n/app_rw.arb
@@ -673,5 +673,70 @@
   "changePasswordTitle": "Hindura ijambo ry'ibanga",
   "secureYourAccountTitle": "Rinda konti yawe",
   "securityTipsTitle": "Ibibazo byo mahoro",
-  "failedDeleteSchedule": "Gusiba gahunda byanze."
+  "failedDeleteSchedule": "Gusiba gahunda byanze.",
+  "accountVerification": "Kwemeza Konti",
+  "verificationPendingTitle": "Konti iri kwemezwa",
+  "verificationPendingMessage": "Iyandikwa ryawe ryashyikirijwe kwemezwa. Itsinda ryacu ry'abayobozi rizasuzuma amakuru y'ishyirahamwe ryawe kandi rizaguhamagara vuba. Urakoze ku bw'ubwihangane bwawe!",
+  "goToHome": "Jya ku Rugo",
+  "emailAlreadyRegistered": "{email} imaze kwiyandikisha",
+  "@emailAlreadyRegistered": { "description": "Ubutumwa bwa error iyo email imaze gukoreshwa", "placeholders": { "email": { "type": "String" } } },
+  "phoneAlreadyRegistered": "Nimero ya telefoni {phone} imaze kwiyandikisha",
+  "@phoneAlreadyRegistered": { "description": "Ubutumwa bwa error iyo nimero ya telefoni imaze gukoreshwa", "placeholders": { "phone": { "type": "String" } } },
+  "cooperativeIdAlreadyRegistered": "ID y'ishyirahamwe {coopId} imaze kwiyandikisha",
+  "@cooperativeIdAlreadyRegistered": { "description": "Ubutumwa bwa error iyo ID y'ishyirahamwe imaze gukoreshwa", "placeholders": { "coopId": { "type": "String" } } },
+  "verifyingRegistration": "Kurikirana kwiyandikisha...",
+  "registrationVerificationFailed": "Ikosa mu kwemeza kwiyandikisha: {error}",
+  "@registrationVerificationFailed": { "description": "Ubutumwa bwa error iyo kwemeza kwananiranye", "placeholders": { "error": { "type": "String" } } },
+  "userInsightFarmHeadline": "Ku mirima {count}, unyunyuguzi bw'ubutaka buri hagati ni {moisture} kandi ubushyuhe buri hagati ni {temp}.",
+  "@userInsightFarmHeadline": { "description": "Ibaruwa y'umutwe isobanura impuzandengo ku rwego rw'imirima", "placeholders": { "count": { "type": "int" }, "moisture": { "type": "String" }, "temp": { "type": "String" } } },
+  "userInsightWaterLine": "Uyu munsi wateje litiro {liters} mu mirima yawe.",
+  "@userInsightWaterLine": { "description": "Umurongo muto ugaragaza litiro zatejwe uyu munsi", "placeholders": { "liters": { "type": "String" } } },
+  "userInsightNoFields": "Nta mirima ufite — ongeraho umurima kugirango utangire kubona amakuru.",
+  "recommendationShortIrrigate": "Kuhira",
+  "recommendationShortDrainage": "Gusohora",
+  "recommendationShortNeutral": "Bisanzwe",
+  "noAlerts": "Nta menyesho",
+  "alert": "Menyesho",
+  "aboutFamingaIrrigation": "Ibyerekeye Faminga Irrigation",
+  "logout": "Sohoka",
+  "version": "Verisiyo 1.0.0",
+  "registrationFailed": "Iyandikwa ryanze. Nyamuneka ongera ugerageze.",
+  "pleaseEnterFirstName": "Nyamuneka andika izina ryawe",
+  "pleaseEnterLastName": "Nyamuneka andika izina ry'umuryango",
+  "pleaseEnterEmail": "Nyamuneka andika imeyili ikwiye",
+  "pleaseEnterPhoneNumber": "Nyamuneka andika nimero ya telefoni ikwiye",
+  "province": "Intara",
+  "chooseProvince": "Nyamuneka hitamo intara",
+  "district": "Akarere",
+  "chooseProvinceFirst": "Nyamuneka hitamo intara mbere",
+  "chooseDistrict": "Nyamuneka hitamo akarere",
+  "addressHint": "Andika aderesi yawe",
+  "addressTooShort": "Aderesi igomba kugira nibura inyuguti 5",
+  "addressTooLong": "Aderesi ntishobora kuziruka inyuguti 100",
+  "pleaseEnterPassword": "Nyamuneka andika ijambo ry'ibanga",
+  "passwordMinLength": "Ijambo ry'ibanga rigomba kugira nibura inyuguti 6",
+  "pleaseConfirmPassword": "Nyamuneka wemeze ijambo ry'ibanga",
+  "passwordsDoNotMatch": "Amagambo y'ibanga ntahura",
+  "manualStart": "Tangira ku buryo bw'intoki",
+  "farmInfo": "Amakuru y'umurima",
+  "scheduled": "Byateguwe",
+  "daysAgo": "Iminsi {days} ishize",
+  "@daysAgo": { "description": "Igihe cyashyizweho iminsi ishize", "placeholders": { "days": { "type": "int" } } },
+  "changePassword": "Hindura ijambo ry'ibanga",
+  "secureYourAccount": "Rinda konti yawe",
+  "currentPassword": "Ijambo ry'ibanga ryigenekerezo",
+  "newPassword": "Ijambo ry'ibanga rishya",
+  "confirmNewPassword": "Emeza ijambo ry'ibanga rishya",
+  "weakPassword": "Ryoroshye",
+  "mediumPassword": "Rihagaze neza",
+  "strongPassword": "Rikomeye",
+  "enterCurrentPassword": "Andika ijambo ry'ibanga ryigenekerezo",
+  "enterNewPassword": "Andika ijambo ry'ibanga rishya",
+  "passwordRequirement8Chars": "Nibura inyuguti 8",
+  "passwordRequirementUppercase": "Byibuze inyuguti nkuru",
+  "passwordRequirementLowercase": "Byibuze inyuguti ntoya",
+  "passwordRequirementNumber": "Byibuze umubare",
+  "reEnterNewPassword": "Ongera wandike ijambo ry'ibanga rishya",
+  "chooseStrongPassword": "Hitamo ijambo ry'ibanga rikomeye kugira ngo urinde amakuru yawe y'umurimyi",
+  "pleaseEnterValidPhoneNumber": "Nyamuneka andika nimero ya telefoni ikwiye"
 }
