--- a/lib/l10n/app_sw.arb
+++ b/lib/l10n/app_sw.arb
@@ -706,6 +706,74 @@
   "changePasswordTitle": "Badilisha Nenosiri",
   "secureYourAccountTitle": "Salinda Akaunti Yako",
   "securityTipsTitle": "Vidokezo vya Usalama",
-  "failedDeleteSchedule": "Imeshindwa kufuta ratiba."
+  "failedDeleteSchedule": "Imeshindwa kufuta ratiba.",
+  "accountVerification": "Uthibitisho wa Akaunti",
+  "verificationPendingTitle": "Akaunti Inathibitishwa",
+  "verificationPendingMessage": "Usajili wako umewasilishwa kwa uthibitisho. Timu yetu ya wasimamizi itapitia maelezo ya ushirika wako na kuwasiliana nawe hivi karibuni. Asante kwa uvumilivu wako!",
+  "goToHome": "Rudi Nyumbani",
+  "emailAlreadyRegistered": "{email} tayari imesajiliwa",
+  "@emailAlreadyRegistered": { "description": "Ujumbe wa kosa wakati email tayari imetumika", "placeholders": { "email": { "type": "String" } } },
+  "phoneAlreadyRegistered": "Nambari ya simu {phone} tayari imesajiliwa",
+  "@phoneAlreadyRegistered": { "description": "Ujumbe wa kosa wakati nambari ya simu tayari imetumika", "placeholders": { "phone": { "type": "String" } } },
+  "cooperativeIdAlreadyRegistered": "Kitambulisho cha ushirika {coopId} tayari kimesajiliwa",
+  "@cooperativeIdAlreadyRegistered": { "description": "Ujumbe wa kosa wakati ID ya ushirika tayari imetumika", "placeholders": { "coopId": { "type": "String" } } },
+  "verifyingRegistration": "Kukagua usajili...",
+  "registrationVerificationFailed": "Kosa kuthibitisha usajili: {error}",
+  "@registrationVerificationFailed": { "description": "Kosa wakati mchakato wa uthibitisho unashindwa", "placeholders": { "error": { "type": "String" } } },
+  "createSchedule": "Tengeneza Ratiba",
+  "deleteScheduleConfirmation": "Una uhakika unataka kufuta ratiba hii ya umwagiliaji?",
+  "addFirstFieldToStart": "Ongeza shamba lako la kwanza kuanza!",
+  "userInsightFarmHeadline": "Kwenye {count} shamba(au), unyevu wa udongo wa wastani ni {moisture} na joto la wastani ni {temp}.",
+  "@userInsightFarmHeadline": { "description": "Mada ya muhtasari wa wastani wa shamba", "placeholders": { "count": { "type": "int" }, "moisture": { "type": "String" }, "temp": { "type": "String" } } },
+  "userInsightWaterLine": "Leo umevimba {liters} katika mashamba yako.",
+  "@userInsightWaterLine": { "description": "Mstari mfupi unaoelezea lita zilizotumika leo", "placeholders": { "liters": { "type": "String" } } },
+  "userInsightNoFields": "Huna mashamba bado — ongeza shamba ili kuanza kupokea taarifa.",
+  "recommendationShortIrrigate": "Mwagilia",
+  "recommendationShortDrainage": "Mtiririko",
+  "recommendationShortNeutral": "Neutrali",
+  "noAlerts": "Hakuna arifa",
+  "alert": "Arifa",
+  "aboutFamingaIrrigation": "Kuhusu Faminga Irrigation",
+  "logout": "Toka",
+  "version": "Toleo 1.0.0",
+  "registrationFailed": "Usajili umeshindwa. Tafadhali jaribu tena.",
+  "pleaseEnterFirstName": "Tafadhali weka jina lako la kwanza",
+  "pleaseEnterLastName": "Tafadhali weka jina lako la ukoo",
+  "pleaseEnterEmail": "Tafadhali weka barua pepe halali",
+  "pleaseEnterPhoneNumber": "Tafadhali weka nambari halali ya simu",
+  "province": "Kanda",
+  "chooseProvince": "Tafadhali chagua kanda",
+  "district": "Wilaya",
+  "chooseProvinceFirst": "Tafadhali chagua kanda kwanza",
+  "chooseDistrict": "Tafadhali chagua wilaya",
+  "addressHint": "Weka anwani yako",
+  "addressTooShort": "Anwani lazima iwe na angalau herufi 5",
+  "addressTooLong": "Anwani haiwezi kuzidi herufi 100",
+  "pleaseEnterPassword": "Tafadhali weka nenosiri",
+  "passwordMinLength": "Nenosiri lazima liwe na angalau herufi 6",
+  "pleaseConfirmPassword": "Tafadhali thibitisha nenosiri lako",
+  "passwordsDoNotMatch": "Nenosiri hazilingani",
+  "manualStart": "Anza kwa mkono",
+  "farmInfo": "Habari za shamba",
+  "scheduled": "Imewekwa ratiba",
+  "daysAgo": "Siku {days} zilizopita",
+  "@daysAgo": { "description": "Wakati uliofupishwa siku zilizopita", "placeholders": { "days": { "type": "int" } } },
+  "changePassword": "Badilisha nenosiri",
+  "secureYourAccount": "Salinda akaunti yako",
+  "currentPassword": "Nenosiri la sasa",
+  "newPassword": "Nenosiri jipya",
+  "confirmNewPassword": "Thibitisha nenosiri jipya",
+  "weakPassword": "Dhaifu",
+  "mediumPassword": "Wastani",
+  "strongPassword": "Kali",
+  "enterCurrentPassword": "Weka nenosiri lako la sasa",
+  "enterNewPassword": "Weka nenosiri jipya",
+  "passwordRequirement8Chars": "Angalau herufi 8",
+  "passwordRequirementUppercase": "Ina herufi kubwa",
+  "passwordRequirementLowercase": "Ina herufi ndogo",
+  "passwordRequirementNumber": "Ina nambari",
+  "reEnterNewPassword": "Weka tena nenosiri jipya",
+  "chooseStrongPassword": "Chagua nenosiri wenye nguvu kuwalinda data yako ya kilimo",
+  "pleaseEnterValidPhoneNumber": "Tafadhali weka nambari halali ya simu"
 }
 
